FIXED | fix vscode-struct
Signed-off-by: Vladislav <101950343+marmevladek@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
       "typeinfo": "c",
       "string.h": "c",
       "antlr3.h": "c",
-      "mylangparser.h": "c"
+      "mylangparser.h": "c",
+      "typeindex": "c",
+      "chrono": "c",
+      "text_encoding": "c"
     }
 }  
