--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ link_directories(/usr/local/Cellar/libantlr3c/3.5.3/lib)
 add_executable(parser main.c grammar/GrammarLexer.c grammar/GrammarParser.c
         ast/ast.c
         graph/graph.c
-        graph/graphStructure.h)
+        graph/graphStructures.h)
 
 target_link_libraries(parser antlr3c)
